gitops/apps/rhcl-demo/base/resources/39b-httproute-external-proxy-public.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: external-proxy-public
  namespace: demo
  labels:
    app: external-proxy
  annotations:
    argocd.argoproj.io/sync-wave: "30"
spec:
  hostnames:
    - external-api.sandbox1529.opentlc.com
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: rhcl-gw
      namespace: openshift-ingress
      sectionName: https-external-public
  rules:
    - matches:
        - method: GET
          path: { type: PathPrefix, value: /nba }
      filters:
        - type: URLRewrite
          urlRewrite:
            path: { type: ReplacePrefixMatch, replacePrefixMatch: /external/nba }
      backendRefs:
        - group: ""
          kind: Service
          name: external-proxy
          port: 80
          weight: 1
    - matches:
        - method: GET
          path: { type: PathPrefix, value: /epl }
      filters:
        - type: URLRewrite
          urlRewrite:
            path: { type: ReplacePrefixMatch, replacePrefixMatch: /external/epl }
      backendRefs:
        - group: ""
          kind: Service
          name: external-proxy
          port: 80
          weight: 1
    - matches:
        - method: GET
          path: { type: PathPrefix, value: /laliga }
      filters:
        - type: URLRewrite
          urlRewrite:
            path: { type: ReplacePrefixMatch, replacePrefixMatch: /external/laliga }
      backendRefs:
        - group: ""
          kind: Service
          name: external-proxy
          port: 80
          weight: 1
    - matches:
        - method: GET
          path: { type: PathPrefix, value: /nfl }
      filters:
        - type: URLRewrite
          urlRewrite:
            path: { type: ReplacePrefixMatch, replacePrefixMatch: /external/nfl }
      backendRefs:
        - group: ""
          kind: Service
          name: external-proxy
          port: 80
          weight: 1
    - matches:
        - method: GET
          path: { type: PathPrefix, value: /nhl }
      filters:
        - type: URLRewrite
          urlRewrite:
            path: { type: ReplacePrefixMatch, replacePrefixMatch: /external/nhl }
      backendRefs:
        - group: ""
          kind: Service
          name: external-proxy
          port: 80
          weight: 1
